--- a/data_server/Makefile
+++ b/data_server/Makefile
@@ -4,7 +4,7 @@ CFLAGS = -Wall -I../lib/cjson
 LDFLAGS = -lmysqlclient
 
 # Source files
-SRC = data_server.c user_manager.c ../lib/cjson/cJSON.c
+SRC = data_server.c user_manager.c chat_manager.c ../lib/cjson/cJSON.c
 OBJ = $(SRC:.c=.o)
 
 # Output binary
