+UDP heartbeat functionality for lb *UDP fd -> fork

--- a/logic_server/Makefile
+++ b/logic_server/Makefile
@@ -1,7 +1,7 @@
-CC=gcc
-CFLAGS=-Wall -Wextra -g
-SRC=logic_server.c ../lib/cjson/cJSON.c
-OUT=logic_server
+CC = gcc
+CFLAGS = -Wall -Wextra -g
+SRC = logic_server.c udp_lb_daemon.c ../lib/cjson/cJSON.c
+OUT = logic_server
 
 all:
 	$(CC) $(CFLAGS) -o $(OUT) $(SRC)
