Intento para hacer que TOKENS funcionen

--- a/logic_server/Makefile
+++ b/logic_server/Makefile
@@ -1,7 +1,10 @@
 CC = gcc
-CFLAGS = -Wall -Wextra -g
+CFLAGS = -Wall -Wextra -g -I/usr/local/include
+LDFLAGS = -L/usr/local/lib
+LDLIBS = -ljwt
+
 SRC = logic_server.c udp_lb_daemon.c ../lib/cjson/cJSON.c
 OUT = logic_server
 
 all:
-	$(CC) $(CFLAGS) -o $(OUT) $(SRC)
+	$(CC) $(CFLAGS) $(LDFLAGS) -o $(OUT) $(SRC) $(LDLIBS)
