Final changes made to load_balancer: Bugs fixed and variables renamed

--- a/load_balancer/frontend_logic_rp_config.json
+++ b/load_balancer/frontend_logic_rp_config.json
@@ -1,8 +1,8 @@
 {
     "mode": "fl",
-    "frontend_tcp_addr": "0.0.0.0:3001",
-    "backend_heartbeat_udp_addr": "0.0.0.0:5000",
-    "backend_addrs": [
+    "client_tcp_listening_addr": "0.0.0.0:3001",
+    "logic_heartbeat_udp_addr": "0.0.0.0:5000",
+    "logic_servers": [
         "0.0.0.0:7000 0.0.0.0:7001",
         "0.0.0.0:7002 0.0.0.0:7003",
         "10.7.29.169:8080 10.7.29.169:9090"
