Validate_User ACTION

--- a/logic_server/Makefile
+++ b/logic_server/Makefile
@@ -1,7 +1,7 @@
 CC = gcc
 CFLAGS = -Wall -Wextra -g -I/usr/local/include
 LDFLAGS = -L/usr/local/lib
-LDLIBS = -ljwt
+LDLIBS = -ljwt -lcrypt
 
 SRC = logic_server.c udp_lb_daemon.c ../lib/cjson/cJSON.c
 OUT = logic_server
